<resources>
    <string name="app_name">ProductPriceAlert</string>
    <string name="name">Name:</string>
    <string name="hello">
      <center>Hello Guest!\nPlease pick an option</center>
    </string>
    <string name="loginButton">Login</string>
    <string name="registerButton">Register</string>
    <string name="registerWelcomeMsg">Hey Guest, please register!</string>
    <string name="email">Email:</string>
    <string name="RegName">Name:</string>
    <string name="password">Password:</string>
    <string name="role">Role:</string>
    <string name="backBtn">Back</string>
    <string name="nameProduct">Product:</string>
    <string name="price">Price:</string>
    <string name="description">Description:</string>
    <string name="imageDesc">Product picture</string>
    <string name="filter">filter</string>
    <string name="popular">popular</string>
    <string name="enter">Enter your filter input below:</string>
    <string name="input">Your input:</string>
    <string name="please_enter_your_login_details">Please enter your login details</string>
    <string name="showFilter">The results of your search:</string>
    <string name="priceAddProduct">Price</string>
    <string name="descriptionAddProduct">Description</string>
    <string name="locationAddProduct">Location Address</string>
    <string name="nameAddProduct">Name</string>
    <string name="edit_browse_products">Edit(Browse) products</string>
    <string name="actions_available">Actions Available:</string>
    <string name="add_new_product">Add new product</string>
    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="welcomePM">Welcome</string>
    <string name="your_role_is_PM">Your role is:</string>
    <string name="logout">Logout</string>
    <string name="backToAll">back to all products</string>
    <string name="Location">Location:</string>
    <string name="purchase">purchase</string>
    <string name="editWel">You can edit the price below:</string>
    <string name="editView">The current price:</string>
    <string name="editNew">The new price:</string>
    <string name="edit">edit price</string>
    <string name="request">request price alerts</string>
    <string name="msg_token_fmt">regToken</string>
    <string name="default_notification_channel_id">com.activities</string>
    <string name="fcm_message" >fcm Message </string>
    <string name="maxPrice" >Provide maximum price</string>
    <string name="maxWel">You can enter a maximum price below:</string>
    <string name="maxView">The current price:</string>
    <string name="maxNew">Your maximum price:</string>
    <string name="max">confirm</string>
    <string name="noPath" > No Path found</string>
    <string name="noPathMessage" > No Path was found to the destination </string>
    <string name="send_notification">Send Notification</string>
    <string name="msg_subscribed">Successfully subscribed!</string>
    <string name="msg_subscribe_failed">Could NOT subscribe!</string>
    <string name="rotate">rotate</string>

</resources>