<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/welcomeNamePM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="63dp"
        android:layout_marginEnd="286dp"
        android:layout_marginBottom="669dp"
        android:text="@string/welcomePM" />

    <TextView
        android:id="@+id/showRolePM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="276dp"
        android:layout_marginBottom="615dp"
        android:text="@string/your_role_is_PM" />

    <Button
        android:id="@+id/browseProductsPM"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="511dp"
        android:text="@string/edit_browse_products"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/actionsPM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="170dp"
        android:layout_marginBottom="579dp"
        android:text="@string/actions_available" />

    <Button
        android:id="@+id/addNewPRBtn"
        android:layout_width="161dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="449dp"
        android:text="@string/add_new_product"
        android:textSize="11sp" />

    <Button
        android:id="@+id/logoutPM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="179dp"
        android:layout_marginBottom="72dp"
        android:text="@string/logout" />
</RelativeLayout>