<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/purple_50"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textProvideMax"
        android:layout_width="280dp"
        android:layout_height="62dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="64dp"
        android:text="@string/maxWel"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currentPriceFieldMax"
        android:layout_width="84dp"
        android:layout_height="47dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="80dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currentPriceTextMax"
        android:layout_width="137dp"
        android:layout_height="49dp"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="440dp"
        android:text="@string/maxView"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/MaxPriceText"
        android:layout_width="133dp"
        android:layout_height="49dp"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="328dp"
        android:text="@string/maxNew"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/maxPriceField"
        android:layout_width="102dp"
        android:layout_height="53dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="328dp"
        android:hint="@string/price"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="Autofill,LabelFor,TextFields" />

    <Button
        android:id="@+id/backMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginBottom="124dp"
        android:text="@string/backBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/maxButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginBottom="16dp"
        android:text="@string/max"
        app:layout_constraintBottom_toTopOf="@+id/backMax"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>