<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.activities.ProductDetailsCustomerActivity"
    android:background="@color/purple_50"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/nameC"
        android:layout_width="98dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:text="@string/nameProduct"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/priceC"
        android:layout_width="86dp"
        android:layout_height="41dp"
        android:layout_marginBottom="95dp"
        android:text="@string/price"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.224"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.997"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/priceGetC"
        android:layout_width="117dp"
        android:layout_height="48dp"
        android:text=""
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.629"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.693"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/descriptionC"
        android:layout_width="141dp"
        android:layout_height="46dp"
        android:layout_marginStart="92dp"
        android:layout_marginBottom="12dp"
        android:text="@string/description"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/descriptionGetC"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageC"
        android:layout_width="204dp"
        android:layout_height="162dp"
        android:layout_marginTop="184dp"
        android:contentDescription="@string/imageDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginBottom="32dp"
        android:text="@string/backToAll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/descriptionGetC"
        android:layout_width="217dp"
        android:layout_height="57dp"
        android:layout_marginStart="92dp"
        android:layout_marginBottom="64dp"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonC"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/locationC"
        android:layout_width="107dp"
        android:layout_height="53dp"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="200dp"
        android:text="@string/Location"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonC"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/nameGetC"
        android:layout_width="261dp"
        android:layout_height="52dp"
        android:layout_marginTop="116dp"
        android:text=""
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.626"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/purchase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        android:text="@string/purchase"
        app:layout_constraintStart_toEndOf="@+id/nameC"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="64dp"
        android:text="@string/request"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageC" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="72dp"
        android:text="@string/maxPrice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonRotC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="304dp"
        android:text="@string/rotate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>