<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.activities.ProductDetailsActivity"
    android:background="@color/purple_50"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/name"
        android:layout_width="98dp"
        android:layout_height="40dp"
        android:text="@string/nameProduct"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.306"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="48dp" />

    <TextView
        android:id="@+id/price"
        android:layout_width="90dp"
        android:layout_height="49dp"
        android:text="@string/price"
        android:textSize="25sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="402dp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="175dp"
        android:layout_height="48dp"
        android:text="@string/description"
        android:textSize="25sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="474dp" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="223dp"
        android:layout_height="178dp"
        android:contentDescription="@string/imageDesc"
        app:srcCompat="@drawable/background"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="96dp"
        tools:layout_editor_absoluteY="197dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backBtn"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="636dp" />

    <TextView
        android:id="@+id/descriptionGet"
        android:layout_width="220dp"
        android:layout_height="80dp"
        android:text=""
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="538dp" />

    <TextView
        android:id="@+id/priceGet"
        android:layout_width="117dp"
        android:layout_height="48dp"
        android:text=""
        android:textSize="25sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="202dp"
        tools:layout_editor_absoluteY="403dp" />

    <TextView
        android:id="@+id/nameGet"
        android:layout_width="221dp"
        android:layout_height="64dp"
        android:text=""
        android:textSize="27sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="102dp" />

</androidx.constraintlayout.widget.ConstraintLayout>