<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.activities.MainActivity">

    <TextView
        android:id="@+id/welcomeMsg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:ems="10"
        android:gravity="center_horizontal"
        android:text="@string/hello"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="32sp" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="333dp"
        android:text="@string/registerButton"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="109dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="337dp"
        android:layout_toStartOf="@+id/registerButton"
        android:text="@string/loginButton" />
</RelativeLayout>